--- a/app/client/package.json
+++ b/app/client/package.json
@@ -1,18 +1,27 @@
 {
-  "name": "client",
-  "version": "1.0.0",
-  "description": "",
-  "main": " ",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "client-1",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-react-app": "^3.1.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "truffle-contract": "^3.0.6"
-  }
+    "react-scripts": "2.0.4",
+    "truffle-contract": "^3.0.6",
+    "web3": "^0.20.6"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
