--- a/app/client/package.json
+++ b/app/client/package.json
@@ -7,6 +7,8 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.1",
     "truffle-contract": "^3.0.6",
     "web3": "^0.20.6"
   },
