--- a/app/client/package.json
+++ b/app/client/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "loglevel": "^1.6.1",
+    "loglevel-plugin-prefix": "^0.8.4",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4",
     "react-redux": "^5.0.7",
+    "react-scripts": "2.0.4",
     "redux": "^4.0.1",
     "truffle-contract": "^3.0.6",
     "web3": "^0.20.6"
