--- a/app/client/package.json
+++ b/app/client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-scripts": "2.0.4",
+    "react-table": "^6.8.6",
     "redux": "^4.0.1",
     "truffle-contract": "^3.0.6",
     "web3": "^0.20.6"
