--- a/app/client/package.json
+++ b/app/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ipfs-api": "^26.1.2",
     "loglevel": "^1.6.1",
     "loglevel-plugin-prefix": "^0.8.4",
     "react": "^16.5.2",
