--- a/app/client/package.json
+++ b/app/client/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-table": "^6.8.6",
     "redux": "^4.0.1",
