--- a/app/client/.eslintrc.json
+++ b/app/client/.eslintrc.json
@@ -3,7 +3,7 @@
     "plugins": ["react"],
 
       "rules" : {
-        "semi": 0,
+        "semi": ["error", "never"],
         "no-console": 0,
         "quotes": [2, "single"],
         "strict": [2, "never"],
