--- a/app/client/package.json
+++ b/app/client/package.json
@@ -8,13 +8,14 @@
     "ipfs-api": "^26.1.2",
     "loglevel": "^1.6.1",
     "loglevel-plugin-prefix": "^0.8.4",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-grid-layout": "^0.16.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4",
+    "react-scripts": "^2.1.3",
     "react-table": "^6.8.6",
     "redux": "^4.0.1",
     "truffle-contract": "^3.0.6",
