--- a/app/client/package.json
+++ b/app/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bignumber.js": "^8.0.2",
     "buffer": "^5.2.1",
     "chalk": "^2.4.1",
     "ipfs-api": "^26.1.2",
@@ -18,7 +19,6 @@
     "react-scripts": "^2.1.3",
     "react-table": "^6.8.6",
     "redux": "^4.0.1",
-    "truffle-contract": "^3.0.6",
     "web3": "^0.20.6"
   },
   "scripts": {
