--- a/app/client/package.json
+++ b/app/client/package.json
@@ -6,6 +6,7 @@
     "bignumber.js": "^8.0.2",
     "buffer": "^5.2.1",
     "chalk": "^2.4.1",
+    "eslint-config-airbnb": "^17.1.0",
     "ipfs-api": "^26.1.2",
     "loglevel": "^1.6.1",
     "loglevel-plugin-prefix": "^0.8.4",
