--- a/app/server/package.json
+++ b/app/server/package.json
@@ -14,11 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "colors": "^1.3.3",
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "express": "^4.16.4",
-    "web3": "^1.0.0-beta.36"
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.9",
+    "path": "^0.12.7",
+    "string-format": "^2.0.0",
+    "web3": "^1.0.0-beta.36",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.6"
