--- a/app/client/package.json
+++ b/app/client/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-grid-layout": "^0.16.6",
+    "react-image": "^2.0.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
