--- a/app/client/package.json
+++ b/app/client/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "^2.1.3",
     "react-table": "^6.8.6",
     "redux": "^4.0.1",
+    "semantic-ui-css": "^2.4.1",
     "web3": "^0.20.6"
   },
   "scripts": {
