--- a/app/client/package.json
+++ b/app/client/package.json
@@ -6,6 +6,7 @@
     "bignumber.js": "^8.0.2",
     "buffer": "^5.2.1",
     "chalk": "^2.4.1",
+    "es6-promise": "^4.2.5",
     "eslint-config-airbnb": "^17.1.0",
     "ipfs-api": "^26.1.2",
     "loglevel": "^1.6.1",
@@ -22,6 +23,7 @@
     "react-table": "^6.8.6",
     "redux": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.85.0",
     "web3": "^0.20.6"
   },
   "scripts": {
