--- a/app/server/package.json
+++ b/app/server/package.json
@@ -19,6 +19,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "express": "^4.16.4",
+    "ipfs-api": "^26.1.2",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.9",
     "path": "^0.12.7",
