--- a/app/client/package.json
+++ b/app/client/package.json
@@ -9,8 +9,6 @@
     "es6-promise": "^4.2.5",
     "eslint-config-airbnb": "^17.1.0",
     "ipfs-api": "^26.1.2",
-    "loglevel": "^1.6.1",
-    "loglevel-plugin-prefix": "^0.8.4",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
@@ -24,6 +22,7 @@
     "redux": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
+    "truffle-contract": "^4.0.4",
     "web3": "^0.20.6"
   },
   "scripts": {
