--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -12,13 +12,8 @@
         "react/jsx-uses-vars": 2,
         "react/prefer-stateless-function": [0],
         "react/react-in-jsx-scope": 2,
-        "prefer-destructuring": 0, 
+        "prefer-destructuring": 0,
         "no-restricted-syntax": ["error", "WithStatement", "BinaryExpression[operator='in']"],
-        "object-curly-newline": ["error", {
-            "ObjectExpression": { "multiline": true},
-            "ObjectPattern": { "multiline": true },
-            "ImportDeclaration": "never",
-            "ExportDeclaration": { "multiline": true, "minProperties": 3 }
-        }]
+        "object-curly-newline": "off"
   }
 }
