--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -2,8 +2,10 @@
     "extends": "airbnb",
     "parser": "babel-eslint",
     "plugins": ["react"],
-
-      "rules" : {
+    "env": {
+        "browser": true
+    },
+    "rules" : {
         "semi": ["error", "never"],
         "no-console": 0,
         "quotes": [2, "single"],
@@ -15,5 +17,5 @@
         "prefer-destructuring": 0,
         "no-restricted-syntax": ["error", "WithStatement", "BinaryExpression[operator='in']"],
         "object-curly-newline": "off"
-  }
+    }
 }
