--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,5 @@ app/client/js/loadAbi.js
 app/server/dist
 coverage/
 coverage.json
-doc/Architecture.md
-doc/Resources.md
-doc/TODO.md
-doc/Dissertation.md
+doc/exclude
+trash**
