--- a/app/client/package.json
+++ b/app/client/package.json
@@ -20,6 +20,8 @@
     "react-scripts": "^2.1.3",
     "react-table": "^6.8.6",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
     "truffle-contract": "^4.0.4",
