--- a/app/client/package.json
+++ b/app/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bignumber.js": "^8.0.2",
+    "bootstrap": "^4.3.1",
     "buffer": "^5.2.1",
     "chalk": "^2.4.1",
     "es6-promise": "^4.2.5",
@@ -12,13 +13,15 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
+    "react-dates": "^19.0.3",
     "react-dom": "^16.5.2",
     "react-grid-layout": "^0.16.6",
     "react-image": "^2.0.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.5",
     "react-table": "^6.8.6",
+    "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
