--- a/app/client/package.json
+++ b/app/client/package.json
@@ -13,13 +13,13 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
-    "react-dates": "^19.0.3",
     "react-dom": "^16.5.2",
     "react-grid-layout": "^0.16.6",
     "react-image": "^2.0.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
+    "react-semantic-ui-datepickers": "^1.8.1",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
