--- a/app/client/package.json
+++ b/app/client/package.json
@@ -28,7 +28,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
     "truffle-contract": "^4.0.4",
-    "web3": "^0.20.6"
+    "web3": "^1.0.0-beta.33"
   },
   "scripts": {
     "start": "react-scripts start",
