test/eslintrc.json: add config file and adjust package-json

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "truffle-assertions": "^0.7.2"
   },
   "dependencies": {
+    "eslint-config-airbnb": "^17.1.0",
     "truffle-contract": "^3.0.6"
   }
 }
