BookingEvent.jsx: create and setup ratingChange
TODO: make the Rating component readonly when it shouldn't be modified

--- a/app/client/package.json
+++ b/app/client/package.json
@@ -11,11 +11,11 @@
     "eslint-config-airbnb": "^17.1.0",
     "ipfs-api": "^26.1.2",
     "prop-types": "^15.6.2",
-    "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-grid-layout": "^0.16.6",
     "react-image": "^2.0.0",
+    "react-rating": "^1.6.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
