--- a/app/client/package.json
+++ b/app/client/package.json
@@ -11,6 +11,7 @@
     "eslint-config-airbnb": "^17.1.0",
     "ipfs-api": "^26.1.2",
     "prop-types": "^15.6.2",
+    "react": "^16.8.6",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-grid-layout": "^0.16.6",
@@ -20,7 +21,6 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
     "react-semantic-ui-datepickers": "^1.8.1",
-    "react-web3": "github:skfarhat/react-web3",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
