--- a/app/client/package.json
+++ b/app/client/package.json
@@ -10,6 +10,7 @@
     "es6-promise": "^4.2.5",
     "eslint-config-airbnb": "^17.1.0",
     "ipfs-api": "^26.1.2",
+    "moment": "^2.24.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
     "react-bootstrap": "^0.32.4",
