--- a/app/server/package.json
+++ b/app/server/package.json
@@ -15,11 +15,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "colors": "^1.3.3",
-    "eslint": "^5.9.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
     "express": "^4.16.4",
     "ipfs-api": "^26.1.2",
+    "minimist": "^1.2.0",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.9",
     "path": "^0.12.7",
@@ -28,6 +26,9 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2",
     "nodemon": "^1.18.6"
   }
 }
