--- a/app/client/.eslintrc.json
+++ b/app/client/.eslintrc.json
@@ -12,6 +12,7 @@
         "strict": [2, "never"],
         "react/jsx-uses-react": 2,
         "react/jsx-uses-vars": 2,
+        "react/jsx-one-expression-per-line": 0,
         "react/prefer-stateless-function": [0],
         "react/react-in-jsx-scope": 2,
         "prefer-destructuring": 0,
