--- a/app/server/package.json
+++ b/app/server/package.json
@@ -20,6 +20,7 @@
     "minimist": "^1.2.0",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.9",
+    "mongoose-hidden": "^1.6.1",
     "path": "^0.12.7",
     "web3": "^1.0.0-beta.36",
     "winston": "^3.2.1"
