--- a/app/client/package.json
+++ b/app/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
+    "react-dropzone": "^10.1.4",
     "react-grid-layout": "^0.16.6",
     "react-image": "^2.0.0",
     "react-rating": "^1.6.2",
@@ -29,6 +30,7 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
+    "styled-components": "^4.2.0",
     "web3": "^1.0.0-beta.33"
   },
   "scripts": {
