--- a/app/client/package.json
+++ b/app/client/package.json
@@ -13,11 +13,13 @@
     "moment": "^2.24.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
+    "react-addons-update": "^15.6.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-dropzone": "^10.1.4",
     "react-grid-layout": "^0.16.6",
     "react-image": "^2.0.0",
+    "react-images-upload": "^1.2.6",
     "react-rating": "^1.6.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
