--- a/app/client/package.json
+++ b/app/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "bignumber.js": "^8.0.2",
     "bootstrap": "^4.3.1",
     "buffer": "^5.2.1",
