--- a/app/client/.eslintrc.json
+++ b/app/client/.eslintrc.json
@@ -11,6 +11,7 @@
         "quotes": [2, "single"],
         "strict": [2, "never"],
         "arrow-body-style": 0,
+        "no-nested-ternary": 0,
         "react/jsx-uses-react": 2,
         "react/jsx-uses-vars": 2,
         "react/jsx-one-expression-per-line": 0,
