--- a/app/server/package.json
+++ b/app/server/package.json
@@ -22,7 +22,7 @@
     "mongoose": "^5.4.9",
     "mongoose-hidden": "^1.6.1",
     "path": "^0.12.7",
-    "web3": "^1.0.0-beta.36",
+    "web3": "^1.2.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
