Upgrade web3 to latest version (1.2.4)

--- a/app/client/package.json
+++ b/app/client/package.json
@@ -34,7 +34,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
     "styled-components": "^4.2.0",
-    "web3": "^1.0.0-beta.33"
+    "web3": "^1.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
