--- a/truffle/package.json
+++ b/truffle/package.json
@@ -20,13 +20,12 @@
   },
   "homepage": "https://github.com/skfarhat/ethbnb#readme",
   "devDependencies": {
-    "solidity-coverage": "^0.6.4",
-    "truffle-assertions": "^0.7.2",
-    "web3": "^1.0.0-beta.33"
+    "solidity-coverage": "^0.6.7",
+    "truffle-assertions": "^0.9.2",
+    "web3": "^1.2.4"
   },
   "dependencies": {
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "truffle-contract": "^3.0.6"
+    "eslint-plugin-import": "^2.17.2"
   }
 }
